# mllm-content-safety

./: .gitignore  pyproject.toml  requirements.yaml
configs/: eval.yaml  model.yaml  train.yaml
docs/: issues.md
scripts/: download_data.py  dry_run.sh  eval.sh  generate_cot.py  remote_setup.sh  train.sh
src/data/: __init__.py  cot_templates.py  hateful_memes.py  mmhs150k.py  preprocessing.py
src/evaluation/: __init__.py  few_shot.py  generalization.py  metrics.py  zero_shot.py
src/inference/: predict.py
src/model/: __init__.py  classifier.py  risk_ranker.py
src/training/: collator.py  finetune.py
